--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,72 @@
+* {
+    margin: 0;
+    padding: 0;
+  }
+
+:root {
+    --background-color: #f9fafb;
+    --font-family: "Arial";
+}
+
 .main {
     display:grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: 1fr 4fr;
+    grid-template-areas:
+        "nav header"
+        "nav info";
+}
+
+.header {
+    grid-area: header;
+    display: grid;
+    background-color: var(--background-color);
+    padding-top: 20px;
+    padding-left: 30px;
+}
+
+.user-bar {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+}
+
+.search-bar {
+    width: 600px;
+    background-color: #949c9f;
+    height: 20px;
+    border-radius: 25px;
+}
+
+.avatar-small {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #949c9f;
+}
+
+.side-nav {
+    grid-area: nav;
+    height: 100vh;
+    background-color: #099ed9;
+    color: white;
+    padding-top: 20px;
+    padding-left: 20px;
+} 
+
+.logo {
+    display: grid;
+    margin-bottom: 50px;
+}
+
+.nav {
+    display: grid;
+    gap: 50px;
+    font-size: 20px;
+    font-family: var(--font-family);
+    font-weight: bold;
+}
+
+.info-section {
+    grid-area: info;
+    padding-top: 20px;
 }
