Finished side-nav and 70% of header

--- a/assets/style.css
+++ b/assets/style.css
@@ -30,17 +30,33 @@
     grid-template-columns: 2fr 1fr;
 }
 
+.search {
+    display: grid;
+    grid-template-columns: 30px auto;
+    gap: 15px;
+    align-items: center;
+}
+
+.user {
+    display: grid;
+    margin-left: 50px;
+    grid-template-columns: 30px 30px auto;
+    gap: 30px; 
+    align-items: center;
+}
+
 .search-bar {
     width: 600px;
     background-color: #949c9f;
-    height: 20px;
+    height: 30px;
     border-radius: 25px;
 }
 
-.avatar-small {
+.avatar-small>img {
     display: inline-block;
     width: 40px;
     height: 40px;
+    border-radius: 50%;
     background-color: #949c9f;
 }
 
@@ -55,7 +71,19 @@
 
 .logo {
     display: grid;
+    grid-template-columns: 60px auto;
+    align-items: center;
     margin-bottom: 50px;
+}
+
+.logo-text {
+    font-family: var(--font-family);
+    color: white;
+    font-size: 30px;
+    font-weight: bold;
+}
+.lg-icon {
+    width: 50px;
 }
 
 .nav {
@@ -64,6 +92,18 @@
     font-size: 20px;
     font-family: var(--font-family);
     font-weight: bold;
+}
+
+.list-item {
+    display: grid;
+    grid-template-columns: 30px auto;
+    align-items: center;
+    gap: 15px;
+    margin-bottom: 15px;
+}
+
+.icon, .lg-icon {
+    color:#f9fafb;
 }
 
 .info-section {
