--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,9 @@
   }
 
 :root {
-    --background-color: #f9fafb;
+    --background-color: #E2E8F0;
+    --second-color: #099ed9;
+    --accent-color: #F0B42A;
     --font-family: "Arial";
 }
 
@@ -20,9 +22,14 @@
 .header {
     grid-area: header;
     display: grid;
-    background-color: var(--background-color);
+    background-color: white;
     padding-top: 20px;
     padding-left: 30px;
+    padding-bottom: 10px;
+    font-family: var(--font-family);
+    font-weight: bold;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.4); 
+    
 }
 
 .user-bar {
@@ -47,7 +54,7 @@
 
 .search-bar {
     width: 600px;
-    background-color: #949c9f;
+    background-color: var(--background-color);
     height: 30px;
     border-radius: 25px;
 }
@@ -60,18 +67,66 @@
     background-color: #949c9f;
 }
 
+.welcome {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+.welcome-text {
+    display: grid;
+    grid-template-columns: 80px auto;
+    column-gap: 10px;
+}
+
+.avatar {
+    grid-row-start: 1;
+    grid-row-end: 3;
+    justify-self: right;
+}
+
 .avatar>img {
     display: inline-block;
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 75px;
     border-radius: 50%;
     background-color: #949c9f;
+}
+
+.greeting {
+    grid-column-start: 2;
+    font-size: .9em;
+    align-self: end;
+}
+
+.name {
+    grid-column-start: 2;
+    font-size: 1.3em;
+}
+
+.button-bar {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+button {
+    background-color: var(--second-color);
+    border: none;
+    padding: 10px 15px;
+    border-radius: 25px;
+    color: white;
+    font-weight: bold;
+    font-size: .9em;
+
 }
 
 .side-nav {
     grid-area: nav;
     height: 100vh;
-    background-color: #099ed9;
+    background-color: var(--second-color);
     color: white;
     padding-top: 20px;
     padding-left: 20px;
@@ -117,4 +172,65 @@
 .info-section {
     grid-area: info;
     padding-top: 20px;
+    background-color: var(--background-color);
+    padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
+    display: grid;
+    grid-template-columns: 4fr 1fr;
+    grid-template-rows: 2fr 2fr;
+    grid-template-areas: "projects announcements"
+                         "projects trend";
+}
+
+.trending {
+    grid-area: trend;
+    margin-left: 20px;
+    width: 300px;
+}
+
+.trending-section {
+    background-color: white;
+    
+}
+
+.announcements {
+    grid-area: announcements;
+    width: 300px;
+    margin-left: 20px;
+
+}
+
+.announcement-section {
+    padding: 20px;
+    background-color: white;
+    margin-top: 15px;
+    border-radius: 10px;
+    
+    
+}
+.projects-section {
+    grid-area: projects;
+    
+}
+
+.projects {
+    margin-top: 15px;
+    display: grid;
+    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(3, auto);
+    gap: 20px;
+}
+
+.project {
+    width: 320px;
+    background-color: white;
+    height: auto;
+    max-height: 200px;
+    border-radius: 10px;
+    border-left: 10px solid var(--accent-color);
+    padding-top: 30px;
+    padding-left: 20px;
+    padding-right: 10px;
+    padding-bottom: 15px;
 }
