--- a/assets/style.css
+++ b/assets/style.css
@@ -47,13 +47,17 @@
 .user {
     display: grid;
     margin-left: 50px;
+    margin-right: 100px;
     grid-template-columns: 30px 30px auto;
     gap: 30px; 
     align-items: center;
+    justify-content: end;
+    
 }
 
 .search-bar {
-    width: 600px;
+    width: 100%;
+    min-width: 600px;
     background-color: var(--background-color);
     height: 30px;
     border-radius: 25px;
@@ -77,6 +81,7 @@
     display: grid;
     grid-template-columns: 80px auto;
     column-gap: 10px;
+    row-gap: 5px;
 }
 
 .avatar {
@@ -107,19 +112,21 @@
 .button-bar {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    margin-right: 30px;
-    margin-left: 30px;
+    gap: 30px;
+    margin-right: 80px;
+    justify-self: end;
 }
 
 button {
     background-color: var(--second-color);
+    width: 100px;
     border: none;
-    padding: 10px 15px;
+    padding: 12px 20px;
     border-radius: 25px;
     color: white;
-    font-weight: bold;
-    font-size: .9em;
+    font-weight: 600;
+    font-size: 1em;
+
 
 }
 
@@ -183,6 +190,13 @@ button {
                          "projects trend";
 }
 
+
+.title {
+    font-size: 1.3em;
+    font-family: var(--font-family);
+    font-weight: 400;
+}
+
 .trending {
     grid-area: trend;
     margin-left: 20px;
@@ -191,7 +205,7 @@ button {
 
 .trending-section {
     background-color: white;
-    
+    color: #919191;
 }
 
 .announcements {
@@ -206,9 +220,21 @@ button {
     background-color: white;
     margin-top: 15px;
     border-radius: 10px;
-    
-    
 }
+
+.announcement {
+    margin: 0 10px;
+    padding: 10px;
+    border-bottom: .5px solid #919191;;
+    font-family: var(--font-family);
+    color: #919191;
+    font-size: 0.8em;
+}
+
+.announcement:last-child {
+    border: none;
+}
+
 .projects-section {
     grid-area: projects;
     
@@ -233,4 +259,21 @@ button {
     padding-left: 20px;
     padding-right: 10px;
     padding-bottom: 15px;
+    font-family: var(--font-family);
+    font-weight: 100;
+    color: #919191;
+    
+}
+
+.project-title {
+    font-weight: 500;
+    font-size: 1.1em;
+    color: #111111;
+}
+
+.action-icons {
+    display: grid;
+    grid-template-columns: 1fr repeat(3, auto);
+    gap: 20px;
+    justify-items: end;
 }
