--- a/assets/style.css
+++ b/assets/style.css
@@ -23,9 +23,9 @@
     grid-area: header;
     display: grid;
     background-color: white;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-left: 30px;
-    padding-bottom: 10px;
+    /* padding-bottom: 10px; */
     font-family: var(--font-family);
     font-weight: bold;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.4); 
